# obsctl

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  build.rs
.github/workflows/: ci.yml
config/: example.toml
scripts/: install.sh
src/: lib.rs  main.rs
src/cli/: config_cmd.rs  mod.rs  note.rs  search.rs  task.rs  version.rs
src/config/: mod.rs
src/core/: mod.rs  tasks.rs  vault.rs
src/mcp/: mod.rs  server.rs
src/search/: mod.rs
src/templates/: mod.rs
templates/: daily.md  task.md
