[package]
name = "obsctl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Obsidian-style CLI for local AI-assisted knowledge and task management."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
rmcp = { version = "0.8.3", features = ["server", "transport-io"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
